# 1A2B

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
gameplay/: difficulty_selector.cpp  difficulty_selector.hpp  game.cpp  game.hpp  game_manager.cpp  game_manager.hpp  input_validator.cpp  input_validator.hpp  secret_number_generator.cpp  secret_number_generator.hpp  solver_game.cpp  solver_game.hpp  user_interface.cpp  user_interface.hpp
interface/: i_guess_strategy.hpp  interface.cpp  interface.hpp
solver/: cache_manager.hpp  entropy_strategy.cpp  entropy_strategy.hpp  frequency_strategy.cpp  frequency_strategy.hpp  guess_history_manager.cpp  guess_history_manager.hpp  heuristic_solver.cpp  heuristic_solver.hpp  hybrid_strategy.cpp  hybrid_strategy.hpp  minimax_strategy.cpp  minimax_strategy.hpp  search_space_manager.cpp  search_space_manager.hpp  strategy_selector.cpp  strategy_selector.hpp
utils/: utils.cpp  utils.hpp
